removed empty header

--- a/2020/lecture_notes/tex/5_PT_1.tex
+++ b/2020/lecture_notes/tex/5_PT_1.tex
@@ -31,7 +31,7 @@
 \def\*#1{\mathbf{#1}}
 \DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
-\title{Lecture 5: Perturbation Theory}
+\title{Lecture 5: Perturbation Theory I}
 \date{April 1, 2020}
 \begin{document}
 \maketitle
@@ -284,12 +284,6 @@ Noting that only the first term of $V$ yields a nonzero result,
 \[ E_0^{(2)} = \sum_{\substack{i < j \\ a < b}} \frac{ |\braket{ \Phi_0 | \frac{1}{4} \bar{g}_{pq}^{rs} a_{rs}^{pq} | \Phi_{ij}^{ab}} |^2}{ \eps_i + \eps_j - \eps_a - \eps_b  }  \]
 \[ E_0^{(2)} = \frac{1}{16} \sum_{\substack{i < j \\ a < b}}  \frac{ |\braket{ ij || ab}|^2}{ \eps_i + \eps_j - \eps_a - \eps_b}\]
 \[ E_0^{(2)} = \frac{1}{4} \sum_{ijab} \frac{ |\braket{ ij || ab}|^2}{ \eps_i + \eps_j - \eps_a - \eps_b}\]
-
-
-% Give expression for MP3, say how complicated things get, motivate Piecuch style
-
-\section{L{\"o}wdin and his Resolvents}
- 
 
 
 \end{document}
